# mc859-strip-packing

./: .gitignore  .gitmodules  CMakeLists.txt  Install-Lemon-in-subfolder.bash  README.md  brkga.conf  instance.yml
cmake/: FindBRKGA.cmake  FindGUROBI.cmake
include/: strip_packing.hpp
include/mylib/: myutils.h
include/strip_packing/: defs.hpp  exact.hpp  flow.hpp  heuristics.hpp  io.hpp  render.hpp
include/strip_packing/util/: first_fit.hpp  first_fit_tree.hpp  sort.hpp
instances/: mc859-level-strip-packing_1_10_100_1_100_1_100_1_5  mc859-level-strip-packing_1_15_100_1_100_1_100_1_5  mc859-level-strip-packing_1_20_100_1_100_1_100_1_5  mc859-level-strip-packing_2_10_100_1_100_1_100_1_5  mc859-level-strip-packing_2_15_100_1_100_1_100_1_5  mc859-level-strip-packing_2_20_100_1_100_1_100_1_5  mc859-level-strip-packing_3_10_100_1_100_1_100_1_5  mc859-level-strip-packing_3_15_100_1_100_1_100_1_5  mc859-level-strip-packing_3_20_100_1_100_1_100_1_5
instances/adversarial/: bfih-bad.yml  ffdd-bad.yml  ffdwhr-bad.yml
instances/random/: random-1-10-100-100.yml  random-1-15-100-100.yml  random-1-20-100-100.yml  random-1-30-100-100.yml  random-1-5-100-100.yml  random-1-50-100-100.yml  random-1.yml  random-1000-1-1-1.yml  random-1000-1-1-100.yml  random-1000-1-10-1.yml  random-1000-1-10-100.yml  random-1000-1-100-1.yml  random-1000-1-100-100.yml  random-1000-10-1-1.yml  random-1000-10-1-100.yml  random-1000-10-10-1.yml  random-1000-10-10-100.yml  random-1000-10-100-1.yml  random-1000-10-100-100.yml  random-1000-30-1-1.yml  random-1000-30-1-100.yml  random-1000-30-10-1.yml  random-1000-30-10-100.yml  random-1000-30-100-1.yml  random-1000-30-100-100.yml  random-2-10-100-100.yml  random-2-15-100-100.yml  random-2-20-100-100.yml  random-2-30-100-100.yml  random-2-5-100-100.yml  random-2-50-100-100.yml  random-2.yml  random-3-10-100-100.yml  random-3-15-100-100.yml  random-3-20-100-100.yml  random-3-30-100-100.yml  random-3-5-100-100.yml  random-3-50-100-100.yml  random-3.yml  random-4-10-100-100.yml  (+47 more)
report/exact/: main.tex  refs.bib
scripts/: extract-costs.sh  gen-input.sh  gen-instances.sh  run-exact.sh  run-flow.sh  run.sh
src/: branch_and_price.cpp  exact.cpp  flow.cpp  gen_instances.cpp  heuristics.cpp  main.cpp
src/mylib/: myutils.cpp
